--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,8 @@ html, body {
         align-items: center;
         height: 100vh;
         width: 100%;
+    }
+    .title {
         font-family: 'Merriweather', serif;
     }
 }
