Add opening hours to index.html

--- a/less/main.less
+++ b/less/main.less
@@ -1,11 +1,9 @@
-html, body {
-    margin: 0;
-    padding: 0;
-}
-
 @media screen and (min-width: 320px){
-    .title {
+    .serif-font {
         font-family: 'Merriweather', serif;
-        text-align: center;
+    }
+
+    .display-4.serif-font{
+        font-size: 3em;
     }
 }
