--- a/less/main.less
+++ b/less/main.less
@@ -8,4 +8,10 @@ html, body {
         font-family: 'Merriweather', serif;
         text-align: center;
     }
+    .product-images {
+        width:100%;
+        > img {
+            width:100%;
+        }
+    }
 }
