Add products to index.html

--- a/less/main.less
+++ b/less/main.less
@@ -17,4 +17,14 @@ html, body {
     .display-4.serif-font{
         font-size: 3em;
     }
+
+    .product {
+        background-color: white;
+        text-align: center;
+    }
+
+    .product-text {
+        font-size: 0.8em;
+        color: gray;
+    }
 }
