Page for employees

--- a/less/main.less
+++ b/less/main.less
@@ -17,4 +17,26 @@ html, body {
     .display-4.serif-font{
         font-size: 3em;
     }
+
+    .employee-list {
+        width:95%;
+        margin:0 auto;
+        text-align:center;
+        > .employee {
+            text-align:center;
+            margin: 0 auto;
+            width:205px;
+            float:left;
+            display:table;
+            > .employee-img {
+                margin: 0 auto;
+                width:200px;
+            }
+            > .employee-name {
+                text-align:center;
+                color:#111;
+            }
+        }
+        overflow:hidden;
+    }
 }
