Add hitta_hit with map

--- a/less/main.less
+++ b/less/main.less
@@ -7,6 +7,12 @@ html, body {
     padding: 0;
 }
 
+#map {
+    width: 60vw;
+    height: 400px;
+    background-color: gray;
+}
+
 @media screen and (min-width: 320px){
     .product-images {
         width:100%;
