--- a/less/main.less
+++ b/less/main.less
@@ -78,3 +78,35 @@ html, body {
         }
     }
 }
+
+i.fab:hover {
+    animation: bounce 0.5s linear;
+}
+
+.fa-facebook-square {
+    color: @footer-text-color;
+}
+
+.fa-twitter-square {
+    color: @footer-text-color;
+}
+
+.fa-instagram-square {
+    color: @footer-text-color;
+}
+
+@keyframes bounce {
+    20% {
+        transform: translateY(-6px);
+    }
+    40% {
+        transform: translateY(0px);
+    }
+    80% {
+        transform: translateY(-2px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
