Added logo to navbar

--- a/less/main.less
+++ b/less/main.less
@@ -37,6 +37,10 @@ html, body {
         color: gray;
     }
 
+    .navbar-brand > img {
+        height: 50px;
+    }
+
     .employee-list {
         > .employee {
             text-align:center;
