Added why choose us

--- a/less/main.less
+++ b/less/main.less
@@ -112,6 +112,17 @@ html, body {
     }
     .message {
         padding:10px;
+        margin-bottom:10px;
+    }
+    .message-why {
+        background-color:#fff3c5ab;
+        padding:15px;
+        .why-header {
+            text-align:center;
+        }
+        .why-item {
+            margin-top:10px;
+        }
     }
 
     i.fab:hover {
