--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -8,13 +8,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item{% if page.url contains "index.html" or page.url == "/" %} active{% endif %}">
                     <a class="nav-link" href="./index.html">Hem</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item{% if page.url contains "personal.html"%} active{% endif %}">
                     <a class="nav-link" href="./personal.html">Personal</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item{% if page.url contains "hitta_hit.html"%} active{% endif %}">
                     <a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
                 </li>
             </ul>
