--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -13,12 +13,12 @@
             <div class="col-md-3 mt-3">
                 <h4>Våra öppetider</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item opening-hour">Måndagar 10-16</li>
-                    <li class="list-group-item opening-hour">Tisdagar 10-16</li>
-                    <li class="list-group-item opening-hour">Onsdagar 10-16</li>
-                    <li class="list-group-item opening-hour">Torsdagar 10-16</li>
-                    <li class="list-group-item opening-hour">Fredagar 10-16</li>
-                    <li class="list-group-item opening-hour">Lördagar 12-15</li>
+                    <li class="list-group-item opening-hour"><span>Måndagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Tisdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Onsdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Torsdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Fredagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Lördagar</span> <span class="time">12-15</span></li>
                 </ul>
             </div>
 
