Added padding to footer

--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -55,7 +55,7 @@
 
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center pb-3">
 
             <div class="col-md-1 col-2 list-group-flush">
                 <a class="social-link" href="https://facebook.com/ntiuppsala/">
