--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,27 +1,9 @@
 <footer class="container-fluid footer mt-5 pt-3">
     <div class="container">
 
-        <div class="row">
+        <div class="row justify-content-center">
 
-            <div class="col-md-6 mt-3">
-                <h4>Floristgården</h4>
-                <p class="pr-2">
-                </p>
-            </div>
-
-            <div class="col-md-3 mt-3">
-                <h4>Våra öppetider</h4>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item opening-hour"><span>Måndagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Tisdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Onsdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Torsdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Fredagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Lördagar</span> <span class="time">12-15</span></li>
-                </ul>
-            </div>
-
-            <div class="col-md-3 mt-3">
+            <div class="col-md-5 mt-3">
                 <h4>Kontaktinfo</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
@@ -50,6 +32,18 @@
                             0630-555-555
                         </a>
                     </li>
+                </ul>
+            </div>
+
+            <div class="col-md-3 mt-3">
+                <h4>Våra öppetider</h4>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item opening-hour"><span>Måndagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Tisdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Onsdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Torsdagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Fredagar</span> <span class="time">10-16</span></li>
+                    <li class="list-group-item opening-hour"><span>Lördagar</span> <span class="time">12-15</span></li>
                 </ul>
             </div>
 
