--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -38,12 +38,9 @@
             <div class="col-md-3 mt-3">
                 <h4>Våra öppetider</h4>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item opening-hour"><span>Måndagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Tisdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Onsdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Torsdagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Fredagar</span> <span class="time">10-16</span></li>
-                    <li class="list-group-item opening-hour"><span>Lördagar</span> <span class="time">12-15</span></li>
+                    {% for day in site.data.open_days %}
+                    <li class="list-group-item opening-hour"><span>{{ day.name }}</span> <span class="time">{{ day.time }}</span></li>
+                    {% endfor %}
                 </ul>
             </div>
 
