--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -6,7 +6,9 @@
     <body>
         {% include navbar.html %}
 
+        <div class="content">
         {{ content }}
+        </div>
         <!-- FOOTER -->
         {% include footer.html %}
         <!-- Script files for Bootstrap -->
