--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -5,6 +5,12 @@
 html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
 
 .textIsBold {
@@ -64,9 +70,14 @@ html, body {
         overflow:hidden;
     }
 
+    .content {
+        flex: 1 0 auto;
+    }
+
     .footer {
         background-color: @footer-bg-color;
         padding: 0px;
+        flex-shrink: 0;
         .list-group-item {
             color: @footer-text-color;
             background-color: @footer-bg-color;
