Change status bar background color

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -250,7 +250,7 @@ body {
 
     .open-banner-div {
         display:none;
-        background-color:#fffab4;
+        background-color:#f5dfe4;
         font-size:1.3em;
         padding:13px;
         button {
