--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="./index.html">
             <img src="./assets/images/floristgarden_logo.png" alt="Floristgården Logo"/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item{% if page.url contains "index.html" or page.url == "/" %} active{% endif %}">
                     <a class="nav-link" href="./index.html">Hem</a>
                 </li>
@@ -18,6 +18,9 @@
                     <a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
                 </li>
             </ul>
+            <span class="open-banner-div onlyjs navbar-text">
+                <div id="open-banner">we be open</div>
+            </span>
         </div>
     </div>
 </nav>
