Removed span around div

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -18,9 +18,9 @@
                     <a class="nav-link" href="./hitta_hit.html">Hitta hit</a>
                 </li>
             </ul>
-            <span class="open-banner-div onlyjs navbar-text">
+            <div class="open-banner-div onlyjs navbar-text">
                 <div id="open-banner">we be open</div>
-            </span>
+            </div>
         </div>
     </div>
 </nav>
