Add navbar change on scroll

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -40,7 +40,8 @@ body {
 
 .navbar.scrolled {
     background: rgb(255, 255, 255) !important; /* NON-IE */
-    background: rgba(255, 255, 255, 0.75) !important; /* NON-IE */
+    background: rgba(255, 255, 255, 0.8) !important; /* NON-IE */
+    padding: .1rem 1rem;
 }
 
 .btn {
