--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="./index.html">
             <img src="./assets/images/floristgarden_logo.png" alt="Floristgården Logo"/>
