--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -6,7 +6,7 @@
     <body>
 
         {% include navbar.html %}
-        <div class="content mt-5">
+        <div class="content">
         {{ content }}
         </div>
         <!-- FOOTER -->
