Less variables and functional navbar without JS

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -3,7 +3,15 @@
         <a class="navbar-brand" href="./index.html">
             <img src="./assets/images/floristgarden_logo.png" alt="Floristgården Logo"/>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+        <input class="d-none" id="navbar-toggler-noscript" type="checkbox" aria-controls="navbarNav" role="button" />
+        <noscript>
+            <label class="d-lg-none" for="navbar-toggler-noscript">
+                <span class="navbar-toggler-icon"></span>
+            </label>
+        </noscript>
+
+        <button class="navbar-toggler onlyjs d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
