Added back to top button

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -277,3 +277,11 @@ label[for=navbar-toggler-noscript] {
 #navbar-toggler-noscript:checked ~ .collapse {
     display: block;
 }
+
+}
+.btt-bg {
+    background-color: #43494f;
+}
+.btt-bg:hover{
+    background-color:#4e565e;
+}
