--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -1,6 +1,10 @@
-<footer class="container-fluid footer mt-5 pt-3">
+<footer class="container-fluid footer mt-5">
+    <a href="#top" class="back-to-top text-white text-decoration-none">
+        <div class="text-center p-2 btt-bg">
+            <span>Tillbaka till toppen</span>
+        </div>
+    </a>
     <div class="container">
-
         <div class="row justify-content-center">
 
             <div class="col-md-5 mt-3">
