Changed text in open-banner

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -27,7 +27,7 @@
                 </li>
             </ul>
             <div class="open-banner-div onlyjs navbar-text">
-                <div id="open-banner">we be open</div>
+                <div id="open-banner">Dagens öppettid kunde inte laddas in</div>
             </div>
         </div>
     </div>
