removed unnecessary code

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -35,7 +35,7 @@ body {
     overflow: hidden;
     padding-bottom: 55%;
     position: relative;
-    height: 0;
+    height: 300px;
     
     > iframe{
         left: 0;
@@ -43,6 +43,7 @@ body {
         height: 100%;
         width: 100%;
         position: absolute;
+        border: 0; 
     }
 }
 
