--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -117,6 +117,10 @@ body {
         height: 30px;
     }
 
+    .mobile-center{
+        text-align: center;
+    }
+
     .employee-list {
         > .employee {
             text-align:center;
@@ -266,6 +270,11 @@ body {
     .blommogram {
         width: 20vw;
     }
+
+    .mobile-center{
+        text-align: unset;
+    }
+    
 }
 
 @media screen and (min-width: @width-min-desktop) {
